--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,6 +2,15 @@
 
 .home {
   .intro {
+    .image-wrapper {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+    }
+    .header-image {
+      width: 90%;
+    }
+
     h2 {
       padding: 15px;
 
