--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,6 +4,13 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  width: 100%;
+
+  @media @phone {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
 
   .logo {
     border: 2px solid green;
